--- a/smilecook/App.xaml
+++ b/smilecook/App.xaml
@@ -144,7 +144,7 @@
             </Style>
             
             <Style x:Key="AddButton" TargetType="Border">
-                <Setter Property="Background" Value="white" />
+                <Setter Property="Background" Value="{StaticResource Primary}" />
                 <Setter Property="StrokeShape" Value="Ellipse"/>
                 <Setter Property="StrokeThickness" Value="0"/>
                 <Setter Property="Padding" Value="5"/>
