--- a/smilecook/Views/RecipeDetailPage.xaml
+++ b/smilecook/Views/RecipeDetailPage.xaml
@@ -66,7 +66,7 @@
 
                             <HorizontalStackLayout Style="{StaticResource IconLabelContainer}">
                                 <Border Style="{StaticResource AddButton}">
-                                    <ImageButton Source="add.svg" 
+                                    <Button ImageSource="add.svg" 
                                                  Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipeDetailViewModel}}, Path=AddToShoppingListCommand}" 
                                                  CommandParameter="{Binding .}"/>
                                 </Border>
