--- a/smilecook/App.xaml
+++ b/smilecook/App.xaml
@@ -14,13 +14,41 @@
             <!-- Colours -->
             <Color x:Key="Primary">#ffc439</Color>
             <Color x:Key="Shadow">Grey</Color>
-            <Color x:Key="Background">#f7f4f4</Color>
+            <Color x:Key="BackgroundLight">#f7f4f4</Color>
+            <Color x:Key="BackgroundLighter">white</Color>
 
 
             <Style TargetType="Image" x:Key="ThumbnailImage">
                 <Setter Property="HeightRequest" Value="100" />
                 <Setter Property="WidthRequest" Value="100" />
                 <Setter Property="Aspect" Value="AspectFill" />
+            </Style>
+
+            <Style TargetType="CollectionView" x:Key="HorizontalCollection">
+                <Setter Property="ItemsLayout" Value="HorizontalList" />
+            </Style>
+
+            <Style TargetType="CollectionView" x:Key="TwoColumnCollection">
+                <Setter Property="ItemsLayout" Value="VerticalGrid, 2" />
+            </Style>
+
+            <Style TargetType="Grid" x:Key="RecipeCardIconGrid">
+                <Setter Property="ColumnSpacing" Value="15" />
+                <Setter Property="Padding" Value="0,0,10,0" />
+            </Style>
+
+            <Style TargetType="Grid" x:Key="RecipeTitleGrid">
+                <Setter Property="ColumnSpacing" Value="15" />
+                <Setter Property="Padding" Value="10,0,10,0" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+            </Style>
+
+            <Style TargetType="Grid" x:Key="SpacedGrid">
+                <Setter Property="ColumnSpacing" Value="10" />
+            </Style>
+
+            <Style TargetType="Image" x:Key="ImagePreview">
+                <Setter Property="MaximumHeightRequest" Value="200" />
             </Style>
 
 
@@ -85,9 +113,6 @@
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="TextColor" Value="Black"/>
                 <Setter Property="Background" Value="transparent"/>
-                <!--<Setter Property="Background" Value="{StaticResource Primary}"/>
-                <Setter Property="TextColor" Value="White"/>
-                <Setter Property="HeightRequest" Value="90"/>-->
                 <Setter Property="HorizontalOptions" Value="Center"/>
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
@@ -117,7 +142,7 @@
             
             <Style TargetType="View" x:Key="MainLayout"
                    ApplyToDerivedTypes="true">
-                <Setter Property="Background" Value="{StaticResource Background}" />
+                <Setter Property="Background" Value="{StaticResource BackgroundLight}" />
             </Style>
 
 
@@ -128,11 +153,12 @@
                 Opacity="0.6"/>
 
             <Style x:Key="BadgeLabel" TargetType="Label">
-                <Setter Property="TextColor" Value="white"/>
+                <Setter Property="TextColor" Value="{StaticResource BackgroundLighter}"/>
                 <Setter Property="HorizontalOptions" Value="Center"/>
                 <Setter Property="VerticalOptions" Value="Center"/>
                 <Setter Property="FontSize" Value="12"/>
             </Style>
+            
             <Style x:Key="Badge" TargetType="Border">
                 <Setter Property="Background" Value="red" />
                 <Setter Property="StrokeShape" Value="RoundRectangle 10"/>
@@ -154,7 +180,7 @@
             </Style>
 
             <Style x:Key="RecipeCard" TargetType="Border">
-                <Setter Property="Background" Value="white" />
+                <Setter Property="Background" Value="{StaticResource BackgroundLighter}" />
                 <Setter Property="StrokeShape" Value="RoundRectangle 10"/>
                 <Setter Property="StrokeThickness" Value="0"/>
                 <Setter Property="Padding" Value="0,0,10,0"/>
@@ -163,25 +189,19 @@
             </Style>
 
             <Style x:Key="TitleBorder" TargetType="Border">
-                <Setter Property="Background" Value="white" />
+                <Setter Property="Background" Value="{StaticResource BackgroundLighter}" />
                 <Setter Property="StrokeShape" Value="RoundRectangle 10"/>
                 <Setter Property="StrokeThickness" Value="0"/>
                 <Setter Property="Shadow" Value="{StaticResource CardShadow}"/>
-                <!--
-                <Setter Property="BorderColor" Value="White"/>
-                <Setter Property="HasShadow" Value="true"/>
-                <Setter Property="CornerRadius" Value="10"/>-->
-
                 <Setter Property="Opacity" Value="0.8"/>
                 <Setter Property="MaximumWidthRequest" Value="300"/>
-
                 <Setter Property="Padding" Value="0"/>
                 <Setter Property="Margin" Value="0"/>
                 <Setter Property="HorizontalOptions" Value="Center"/>
             </Style>
 
             <Style x:Key="LabelTag" TargetType="Border">
-                <Setter Property="Background" Value="white"/>
+                <Setter Property="Background" Value="{StaticResource BackgroundLighter}"/>
                 <Setter Property="StrokeShape" Value="RoundRectangle 20"/>
                 <Setter Property="StrokeThickness" Value="0"/>
                 <Setter Property="Margin" Value="5"/>
@@ -189,8 +209,12 @@
             </Style>
 
             <Style x:Key="SearchField" TargetType="SearchBar">
-                <Setter Property="Background" Value="white" />
+                <Setter Property="Background" Value="{StaticResource BackgroundLighter}" />
                 <Setter Property="HorizontalOptions" Value="Center" />
+            </Style>
+
+            <Style x:Key="Textarea" TargetType="Editor">
+                <Setter Property="HeightRequest" Value="200" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
