--- a/smilecook/Views/MyRecipesPage.xaml
+++ b/smilecook/Views/MyRecipesPage.xaml
@@ -11,8 +11,7 @@
             <Button Text="Add Recipe" 
                     Command="{Binding GoToAddRecipeCommand}"
                     Style="{StaticResource SpacedButton}"/>
-            <CollectionView ItemsSource="{Binding MyRecipes}"
-                            SelectionMode="None">
+            <CollectionView ItemsSource="{Binding MyRecipes}">
 
             <CollectionView.EmptyView>
                 <StackLayout Style="{StaticResource EmptyView}">
@@ -25,11 +24,11 @@
                         <Border Style="{StaticResource RecipeCard}">
                             <Border.GestureRecognizers>
                                 <TapGestureRecognizer CommandParameter="{Binding .}"
-                                                          Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MyRecipesViewModel}}, Path=GoToRecipeDetailCommand}"/>
+                                                      Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MyRecipesViewModel}}, Path=GoToRecipeDetailCommand}"/>
                             </Border.GestureRecognizers>
                             <Grid ColumnDefinitions="Auto, *"
-                                      RowDefinitions="*,Auto" 
-                                      ColumnSpacing="10">
+                                  RowDefinitions="*,Auto" 
+                                  Style="{StaticResource SpacedGrid}">
                                 <Image Style="{StaticResource ThumbnailImage}"
                                        Grid.Column="0"
                                        Grid.RowSpan="2"
