--- a/smilecook/App.xaml
+++ b/smilecook/App.xaml
@@ -5,6 +5,7 @@
              x:Class="smilecook.App">
     <Application.Resources>
         <ResourceDictionary>
+            
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
@@ -14,8 +15,14 @@
             <!-- Colours -->
             <Color x:Key="Primary">#ffc439</Color>
             <Color x:Key="Shadow">Grey</Color>
+
+            <Color x:Key="TextLight">#050505</Color>
+            <Color x:Key="TextDark">white</Color>
+            
             <Color x:Key="BackgroundLight">#f7f4f4</Color>
             <Color x:Key="BackgroundLighter">white</Color>
+            <Color x:Key="BackgroundDark">#4d4d4d</Color>
+            <Color x:Key="BackgroundDarker">#050505</Color>
 
 
             <Style TargetType="Image" x:Key="ThumbnailImage">
@@ -90,7 +97,7 @@
 
             <Style x:Key="Link" TargetType="Button">
                 <Setter Property="Background" Value="transparent"/>
-                <Setter Property="TextColor" Value="black"/>
+                <Setter Property="TextColor" Value="{StaticResource TextLight}"/>
                 <Setter Property="FontSize" Value="15"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="HorizontalOptions" Value="Start"/>
@@ -107,11 +114,17 @@
             <Style x:Key="SpacedButton" TargetType="Button">
                 <Setter Property="Margin" Value="10"/>
             </Style>
+
+
+            <Style TargetType="Button">
+                <Setter Property="Background" Value="{StaticResource Primary}"/>
+                <Setter Property="TextColor" Value="{StaticResource TextDark}"/>
+            </Style>
             
             <Style x:Key="RecipeTitle" TargetType="Label">
                 <Setter Property="FontSize" Value="15"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
-                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource TextLight}, Dark={StaticResource TextLight}}"/>
                 <Setter Property="Background" Value="transparent"/>
                 <Setter Property="HorizontalOptions" Value="Center"/>
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
@@ -121,8 +134,13 @@
             
             <Style x:Key="IconLabel" TargetType="Label">
                 <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource TextLight}, Dark={StaticResource TextLight}}"/>
             </Style>
-            
+
+
+            <Style x:Key="IconLabelCard" BasedOn="{StaticResource IconLabel}" TargetType="Label">
+                <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource TextLight}, Dark={StaticResource TextDark}}"/>
+            </Style>
 
             <Style x:Key="IconLabelContainer" TargetType="HorizontalStackLayout">
                 <Setter Property="Spacing" Value="5"/>
@@ -142,7 +160,7 @@
             
             <Style TargetType="View" x:Key="MainLayout"
                    ApplyToDerivedTypes="true">
-                <Setter Property="Background" Value="{StaticResource BackgroundLight}" />
+                <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource BackgroundLight}, Dark={StaticResource BackgroundDark}}" />
             </Style>
 
 
@@ -168,9 +186,9 @@
                 <Setter Property="Padding" Value="0"/>
                 <Setter Property="Margin" Value="35, 3, 0, 30"/>
             </Style>
-            
-            <Style x:Key="AddButton" TargetType="Border">
-                <Setter Property="Background" Value="{StaticResource Primary}" />
+
+            <Style x:Key="AddButtonBorder" TargetType="Border">
+                <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Primary}}" />
                 <Setter Property="StrokeShape" Value="Ellipse"/>
                 <Setter Property="StrokeThickness" Value="0"/>
                 <Setter Property="Padding" Value="5"/>
@@ -178,9 +196,13 @@
                 <Setter Property="HeightRequest" Value="30"/>
                 <Setter Property="HorizontalOptions" Value="End"/>
             </Style>
+            <Style x:Key="AddButton" TargetType="Button">
+                <Setter Property="Background" Value="{StaticResource Primary}" />
+
+            </Style>
 
             <Style x:Key="RecipeCard" TargetType="Border">
-                <Setter Property="Background" Value="{StaticResource BackgroundLighter}" />
+                <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource BackgroundLighter}, Dark={StaticResource BackgroundDarker}}" />
                 <Setter Property="StrokeShape" Value="RoundRectangle 10"/>
                 <Setter Property="StrokeThickness" Value="0"/>
                 <Setter Property="Padding" Value="0,0,10,0"/>
@@ -201,7 +223,7 @@
             </Style>
 
             <Style x:Key="LabelTag" TargetType="Border">
-                <Setter Property="Background" Value="{StaticResource BackgroundLighter}"/>
+                <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource BackgroundLighter}, Dark={StaticResource BackgroundDarker}}"/>
                 <Setter Property="StrokeShape" Value="RoundRectangle 20"/>
                 <Setter Property="StrokeThickness" Value="0"/>
                 <Setter Property="Margin" Value="5"/>
@@ -209,8 +231,12 @@
             </Style>
 
             <Style x:Key="SearchField" TargetType="SearchBar">
-                <Setter Property="Background" Value="{StaticResource BackgroundLighter}" />
+                <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource BackgroundLighter}, Dark={StaticResource BackgroundDarker}}" />
                 <Setter Property="HorizontalOptions" Value="Center" />
+            </Style>
+
+            <Style TargetType="CheckBox">
+                <Setter Property="Color" Value="{StaticResource Primary}" />
             </Style>
 
             <Style x:Key="Textarea" TargetType="Editor">
