--- a/smilecook/Views/MyRecipeDetailPage.xaml
+++ b/smilecook/Views/MyRecipeDetailPage.xaml
@@ -32,8 +32,9 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="model:MyIngredient">
                             <HorizontalStackLayout Style="{StaticResource IconLabelContainer}">
-                                <Border Style="{StaticResource AddButton}" >
+                                <Border Style="{StaticResource AddButtonBorder}" >
                                     <Button ImageSource="add.svg" 
+                                            Style="{StaticResource AddButton}"
                                             Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MyRecipeDetailViewModel}}, Path=AddToShoppingListCommand}" 
                                             CommandParameter="{Binding IngredientLine}"/>
                                 </Border>
