--- a/smilecook/Views/MyRecipesPage.xaml
+++ b/smilecook/Views/MyRecipesPage.xaml
@@ -36,7 +36,7 @@
                                 <Label Text="{Binding Label}"
                                        Style="{StaticResource CardTitle}" 
                                        Grid.Column="1"/>
-                                <Border Style="{StaticResource AddButton}"
+                                <Border Style="{StaticResource AddButtonBorder}"
                                         Grid.Column="1"
                                         Grid.Row="0">
                                     <ImageButton Source="delete.svg"
